@@ -1,7 +1,6 @@
 package edu.eci.arsw.calls.api;
 
 import edu.eci.arsw.calls.domain.Review;
-import edu.eci.arsw.calls.domain.ReviewRepository;
 import edu.eci.arsw.calls.security.AuthorizationService;
 import edu.eci.arsw.calls.service.ReviewService;
 import org.junit.jupiter.api.Test;
@@ -13,6 +12,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 
+import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -25,56 +26,69 @@ class ReviewControllerTest {
 
     @Mock private ReviewService service;
     @Mock private AuthorizationService authz;
-    @Mock private Authentication auth;
+    @Mock private Authentication auth; 
+    
     @InjectMocks private ReviewController controller;
+
 
     @Test
     void create_Success() {
-        when(auth.getPrincipal()).thenReturn("s1");
+        when(auth.getPrincipal()).thenReturn("student1");
         Map<String, Object> body = Map.of(
             "reservationId", "res1",
-            "tutorId", "t1",
+            "tutorId", "tutor1",
             "rating", 5,
-            "comment", "Good"
+            "comment", "Excellent"
         );
 
-        ResponseEntity<Map<String, Object>> resp = controller.create("Bearer t", body, auth);
+        ResponseEntity<Map<String, Object>> response = controller.create("Bearer token", body, auth);
 
-        assertEquals(HttpStatus.OK, resp.getStatusCode());
-        assertEquals(true, resp.getBody().get("ok"));
-        verify(service).create(any(), eq("res1"), eq("t1"), eq("s1"), any(), eq(5), eq("Good"));
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(true, response.getBody().get("ok"));
+        
+        verify(service).create(
+            eq("Bearer token"), eq("res1"), eq("tutor1"), eq("student1"), isNull(), eq(5), eq("Excellent")
+        );
+        verify(authz).parseBearer("Bearer token");
     }
 
     @Test
-    void create_Success_WithNullCommentAndDefaults() {
-        when(auth.getPrincipal()).thenReturn("s1");
-        Map<String, Object> body = Map.of("reservationId", "res1"); 
+    void create_Success_DefaultsAndExceptionsIgnored() {
+        when(auth.getPrincipal()).thenReturn("student1");
+        
+        doThrow(new RuntimeException("Token invalido")).when(authz).parseBearer(anyString());
 
-        ResponseEntity<Map<String, Object>> resp = controller.create("Bearer t", body, auth);
+        Map<String, Object> body = Map.of("reservationId", "res1");
 
-        assertEquals(HttpStatus.OK, resp.getStatusCode());
-        verify(service).create(any(), anyString(), anyString(), eq("s1"), any(), eq(0), isNull());
+        ResponseEntity<Map<String, Object>> response = controller.create("Bearer bad_token", body, auth);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        verify(service).create(any(), any(), any(), any(), any(), eq(0), isNull());
     }
 
     @Test
     void create_Unauthorized_NullAuthentication() {
-        assertEquals(HttpStatus.UNAUTHORIZED, controller.create("tok", Map.of(), null).getStatusCode());
+        ResponseEntity<Map<String, Object>> resp = controller.create("t", Map.of(), null);
+        assertEquals(HttpStatus.UNAUTHORIZED, resp.getStatusCode());
+        assertEquals("UNAUTHORIZED", resp.getBody().get("error"));
     }
 
     @Test
-    void create_Unauthorized_EmptyPrincipal() {
-        when(auth.getPrincipal()).thenReturn(""); 
-
-        ResponseEntity<Map<String, Object>> resp = controller.create("tok", Map.of(), auth);
+    void create_Unauthorized_BlankPrincipal() {
+        when(auth.getPrincipal()).thenReturn("   ");
+        ResponseEntity<Map<String, Object>> resp = controller.create("t", Map.of(), auth);
         assertEquals(HttpStatus.UNAUTHORIZED, resp.getStatusCode());
     }
 
     @Test
-    void create_BadRating() {
+    void create_BadRequest_InvalidRatingFormat() {
         when(auth.getPrincipal()).thenReturn("s1");
-        Map<String, Object> body = Map.of("rating", "invalid-number");
-        
-        assertEquals(HttpStatus.BAD_REQUEST, controller.create("tok", body, auth).getStatusCode());
+        Map<String, Object> body = Map.of("rating", "cinco"); // String inválido
+
+        ResponseEntity<Map<String, Object>> resp = controller.create("t", body, auth);
+
+        assertEquals(HttpStatus.BAD_REQUEST, resp.getStatusCode());
+        assertEquals("rating inválido", resp.getBody().get("error"));
     }
 
     @Test
@@ -82,80 +96,65 @@ class ReviewControllerTest {
         when(auth.getPrincipal()).thenReturn("s1");
         Map<String, Object> body = Map.of("rating", 5);
 
-        doThrow(new SecurityException("Forbidden")).when(service).create(any(),any(),any(),any(),any(),anyInt(),any());
-        assertEquals(HttpStatus.FORBIDDEN, controller.create("tok", body, auth).getStatusCode());
+        doThrow(new SecurityException("No es tu reserva"))
+            .when(service).create(any(), any(), any(), any(), any(), anyInt(), any());
+        assertEquals(HttpStatus.FORBIDDEN, controller.create("t", body, auth).getStatusCode());
 
-        doThrow(new IllegalArgumentException("Bad arg")).when(service).create(any(),any(),any(),any(),any(),anyInt(),any());
-        assertEquals(HttpStatus.BAD_REQUEST, controller.create("tok", body, auth).getStatusCode());
-        
-        doThrow(new RuntimeException("Error genérico")).when(service).create(any(),any(),any(),any(),any(),anyInt(),any());
-        assertEquals(HttpStatus.BAD_REQUEST, controller.create("tok", body, auth).getStatusCode());
-    }
-    
-    @Test
-    void create_AuthzParsing_ExceptionIgnored() {
-        when(auth.getPrincipal()).thenReturn("s1");
-        doThrow(new RuntimeException("Parse error")).when(authz).parseBearer(anyString());
-        
-        ResponseEntity<Map<String, Object>> resp = controller.create("bad-token", Map.of("rating", 5), auth);
-        
-        assertEquals(HttpStatus.OK, resp.getStatusCode());
-        verify(service).create(any(), any(), any(), any(), isNull(), anyInt(), any());
+        doThrow(new IllegalArgumentException("Faltan datos"))
+            .when(service).create(any(), any(), any(), any(), any(), anyInt(), any());
+        assertEquals(HttpStatus.BAD_REQUEST, controller.create("t", body, auth).getStatusCode());
+
+        doThrow(new RuntimeException("Error inesperado"))
+            .when(service).create(any(), any(), any(), any(), any(), anyInt(), any());
+        assertEquals(HttpStatus.BAD_REQUEST, controller.create("t", body, auth).getStatusCode());
     }
 
-    @Test
-    void list_Success_And_Mapping() {
 
-        Review mockReview = mock(Review.class);
-        when(mockReview.getId()).thenReturn("r1");
-        when(mockReview.getTutorId()).thenReturn("t1");
-        when(mockReview.getCreatedAt()).thenReturn(java.time.Instant.now()); 
+    @Test
+    void list_Success_Mapping() {
+        Review r = mock(Review.class);
+        when(r.getId()).thenReturn("r1");
+        when(r.getCreatedAt()).thenReturn(Instant.now());
         
-        when(service.listByTutor("t1", 20)).thenReturn(List.of(mockReview));
+        when(service.listByTutor("t1", 20)).thenReturn(List.of(r));
 
         List<ReviewController.ReviewResponse> result = controller.list("t1", 20);
 
-        assertFalse(result.isEmpty());
+        assertEquals(1, result.size());
         assertEquals("r1", result.get(0).id());
-        assertNotNull(result.get(0).createdAt()); 
+        assertNotNull(result.get(0).createdAt());
     }
 
     @Test
-    void list_Success_Mapping_NullDate() {
-        Review mockReview = mock(Review.class);
-        when(mockReview.getCreatedAt()).thenReturn(null);
-        
-        when(service.listByTutor("t1", 20)).thenReturn(List.of(mockReview));
+    void list_Mapping_NullDate() {
+        Review r = mock(Review.class);
+        when(r.getCreatedAt()).thenReturn(null);
+        when(service.listByTutor("t1", 20)).thenReturn(List.of(r));
 
         List<ReviewController.ReviewResponse> result = controller.list("t1", 20);
-
         assertNull(result.get(0).createdAt());
     }
 
     @Test
-    void list_Limit_Clamping() {
-        when(service.listByTutor(anyString(), anyInt())).thenReturn(List.of());
+    void list_LimitClamping() {
+        when(service.listByTutor(anyString(), anyInt())).thenReturn(Collections.emptyList());
 
-        controller.list("t1", -5); 
+        controller.list("t1", -10);
         verify(service).listByTutor("t1", 1);
-        
-        controller.list("t1", 1000); 
+
+        controller.list("t1", 100);
         verify(service).listByTutor("t1", 50);
     }
 
+
     @Test
     void summary_Success() {
-        ReviewRepository.TutorRatingSummary mockSum = mock(ReviewRepository.TutorRatingSummary.class);
-        when(mockSum.getTutorId()).thenReturn("t1");
-        when(mockSum.getAvg()).thenReturn(4.5);
-        when(mockSum.getCount()).thenReturn(10L); 
-        
-        when(service.summary("t1")).thenReturn(mockSum);
-        
-        Map<String, Object> result = controller.summary("t1");
+        ReviewService.TutorSummary mockSummary = new ReviewService.TutorSummary("t1", 4.5, 10L);
+        when(service.summary("t1")).thenReturn(mockSummary);
 
-        assertEquals("t1", result.get("tutorId"));
-        assertEquals(4.5, result.get("avg"));
-        assertEquals(10L, result.get("count"));
+        ReviewService.TutorSummary result = controller.summary("t1");
+
+        assertEquals("t1", result.tutorId());
+        assertEquals(4.5, result.avg());
     }
 }
